Alerts in Watch chat and new chat button.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -23887,6 +23887,7 @@
       }
     },
     "Chat is hidden" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -50023,6 +50024,7 @@
       }
     },
     "Interactive chat" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
