SRTLA server with empty stream id (aka none).

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -86860,6 +86860,7 @@
       }
     },
     "Stream id missing" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
