Cat printer image.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -11020,6 +11020,9 @@
         }
       }
     },
+    "A small affordable black and white printer." : {
+
+    },
     "a sound" : {
       "localizations" : {
         "de" : {
