--- a/Moblin Widget/Localizable.xcstrings
+++ b/Moblin Widget/Localizable.xcstrings
@@ -8,6 +8,12 @@
             "state" : "translated",
             "value" : "Moblin"
           }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Moblin"
+          }
         }
       }
     },
@@ -17,6 +23,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Moblin Widget."
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Виджет Moblin"
           }
         }
       }
