Twitch category started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -73930,6 +73930,12 @@
         }
       }
     },
+    "Raid" : {
+
+    },
+    "raided with a party of %lld" : {
+
+    },
     "Ratings" : {
       "localizations" : {
         "de" : {
