Video widget started.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -107233,6 +107233,9 @@
         }
       }
     },
+    "Video source..." : {
+
+    },
     "Video stabilization" : {
       "localizations" : {
         "de" : {
