Chat left of control bar.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -53262,6 +53262,9 @@
         }
       }
     },
+    "Left of control bar" : {
+
+    },
     "Length" : {
       "localizations" : {
         "de" : {
