Cat printer print chat toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -72506,6 +72506,9 @@
         }
       }
     },
+    "Print chat" : {
+
+    },
     "Privacy policy" : {
       "localizations" : {
         "de" : {
