Chat bot subscribers permission.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -91776,6 +91776,9 @@
         }
       }
     },
+    "Subscribers" : {
+
+    },
     "Subscribers only" : {
       "localizations" : {
         "de" : {
