--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -14132,6 +14132,9 @@
         }
       }
     },
+    "Anonymous" : {
+
+    },
     "App restart needed to take effect." : {
       "localizations" : {
         "de" : {
