--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -1205,6 +1205,9 @@
         }
       }
     },
+    "!moblin snapshot" : {
+
+    },
     "!moblin tts off" : {
       "localizations" : {
         "de" : {
@@ -94752,6 +94755,9 @@
           }
         }
       }
+    },
+    "Take snapshot." : {
+
     },
     "Tap screen to focus" : {
       "localizations" : {
