Cinematic extended enhanced.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -25714,6 +25714,9 @@
         }
       }
     },
+    "Cinematic extended enhanced" : {
+
+    },
     "Circle" : {
       "localizations" : {
         "de" : {
