Optional meow sound when printing a fax.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -43533,6 +43533,9 @@
         }
       }
     },
+    "Fax meow sound" : {
+
+    },
     "Fax the streamer images." : {
       "localizations" : {
         "de" : {
