Chat bot minimum subscriber tier permission.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -60853,6 +60853,9 @@
         }
       }
     },
+    "Minimum subscriber tier" : {
+
+    },
     "Mirror front camera on stream" : {
       "localizations" : {
         "de" : {
