Initial privacy blur (blur background).

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -76009,6 +76009,9 @@
         }
       }
     },
+    "Privacy" : {
+
+    },
     "Privacy policy" : {
       "localizations" : {
         "de" : {
